"fixed responsivness issues on smaller screens"

--- a/styles.css
+++ b/styles.css
@@ -165,8 +165,8 @@ body {
 }
 
 .hero-text p {
-  font-size: 3rem;
-  margin-bottom: 30px;
+  font-size: 2.5rem;
+  margin-top: -10px;
   font-weight: 100;
   max-width: 400px;
   line-height: 1.5;
@@ -195,7 +195,7 @@ body {
 .nutrition-circles {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  gap: 8px;
   padding: 0 5%;
   min-width: min-content;
 }
@@ -209,9 +209,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #fff;
+  color: #ffffff;
   padding: 10px;
   text-align: center;
+  opacity: 90%;
 }
 
 .circle-number {
@@ -222,8 +223,8 @@ body {
 }
 
 .circle-label {
-  font-size: 0.9rem;
-  font-weight: 300;
+  font-size: 1.2rem;
+  font-weight: 100;
   line-height: 1.2;
 }
 
@@ -346,7 +347,12 @@ body {
   background-color: #3e7d19;
 }
 
+@media (max-width: 1100px){
+  .hero-text h1{
+    font-size: 5rem;
+  }
 
+}
 
 
 
